Updating about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site is created by Rami Alkawadri.</p>
             <img src="/img/profile-picture.png" alt="Picture of me" class="portrait">
         </div>
 
